fix some modal overflow problems on small screen sizes

--- a/public/css/newyears.css
+++ b/public/css/newyears.css
@@ -539,10 +539,17 @@ hr {
     #dj-image {
         display: block !important;
     }
+    .modal-lg {
+        width: 95%;
+    }
 }
 
 @media (max-width: 600px) {
     .djpage-panel>.col-md-3 {
         width: 100%;
+    }
+    .modal-content {
+        top: unset;
+        transform: unset;
     }
 }
